Bug 1752917 - Check that a ScriptProcessorNode still has a track after marking it as inactive while updating its connection status. r=karlt

Differential Revision: https://phabricator.services.mozilla.com/D141247